--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-scikit-learn==0.22.1
-matplotlib==3.2.2
-numpy==1.18.1
-pandas==1.0.5
-streamlit==0.62.0
+scikit-learn==1.0.2
+numpy==1.21.5
+pandas==1.4.4
+streamlit==1.20.0
 Werkzeug==1.0.1
+joblib==1.1.0
